@@ -1,5 +1,4 @@
 package fr.ynov.dap_client.dap_client;
-//TODO brc by Djer Pourquoi un nom de package aussi "moche" ?
 
 import java.awt.Desktop;
 import java.io.BufferedReader;
@@ -9,6 +8,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+
 
 /**
  * The Class App.
@@ -25,20 +25,73 @@ public class App
      */
     public static void main( String[] args ) throws IOException, URISyntaxException
     {         
-        //TODO brc by Djer Extraire arg[0] dans "action" et args[1] dans "userKey" aurait clarifier le code
-		if(args[0].equals("add")) {
-            URI uri = new URI("http://localhost:8080/account/add/" + args[1]);
-			Desktop.getDesktop().browse(uri);
-		}
-		else {
-			if(args[0].equals("gmail") || args[0].equals("contact") || args[0].equals("calendar"))
-				sendUrl(new URL("http://localhost:8080/"+args[0]+"?userId=" + args[1]));
-			
-			if(args[0].equals("view")) {
-				sendUrl(new URL("http://localhost:8080/calendar?userId=" + args[1]));
-				sendUrl(new URL("http://localhost:8080/contact?userId=" + args[1]));
-				sendUrl(new URL("http://localhost:8080/gmail?userId=" + args[1]));
+    	String action = args[0];
+    	String type = args[1];
+    	String userKey = args[2];
+    	
+
+		if(action.equals("add")) {
+			URI uri = new URI("");
+
+			switch(type) {
+				case "user":
+					uri = new URI("http://localhost:8080/user/add?userKey=" + userKey);
+					Desktop.getDesktop().browse(uri);
+					break;
+				
+				case "microsoft":
+					String msAccountName = args[3];
+					uri = new URI("http://localhost:8080/microsoft/account/add/" + msAccountName + "?userKey=" + userKey);
+					Desktop.getDesktop().browse(uri);
+					break;
+					
+				case "google":
+					String googleAccountName = args[3];
+					uri = new URI("http://localhost:8080/google/account/add/" + googleAccountName + "?userKey=" + userKey);
+					Desktop.getDesktop().browse(uri);
+					break;
 			}
+		}
+		else if(action.equals("mail")){
+			switch(type) {
+				case "all":
+					sendUrl(new URL("http://localhost:8080/mail/nbUnread?userKey=" + userKey));
+					break;
+				
+				case "microsoft":
+					sendUrl(new URL("http://localhost:8080/microsoft/nbUnreadMails?userKey=" + userKey));
+					break;
+					
+				case "google":
+					sendUrl(new URL("http://localhost:8080/google/nbUnreadMails?userKey=" + userKey));
+					break;
+			}
+		}
+		else if(action.equals("event")){
+			switch(type) {
+				case "google":
+					sendUrl(new URL("http://localhost:8080/google/calendar?userKey=" + userKey));
+					break;
+				
+				case "all":
+					sendUrl(new URL("http://localhost:8080/RestNextEvent?userKey=" + userKey));
+					break;
+			}	
+		}
+		else if(action.equals("contact")) {
+			switch(type) {
+				case "google":
+					sendUrl(new URL("http://localhost:8080/google/nbContact?userKey=" + userKey));
+					break;
+				
+				case "microsoft":
+					sendUrl(new URL("http://localhost:8080/microsoft/nbContact?userKey=" + userKey));
+					break;
+					
+				case "all":
+					sendUrl(new URL("http://localhost:8080/nbContact?userKey=" + userKey));
+					break;
+			}	
 		}
     }
     
@@ -51,14 +104,12 @@ public class App
     private static void sendUrl(URL url) throws IOException {
     	URLConnection connection = url.openConnection();
 	    BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream())); 
-	    //FIXME brc by Djer U u n d v c !!! (traduction : Utilise un nom de varaible claire)
-	    String i; 
+	    String response; 
 			   
 	    //print the source code line by line. 
-	    while ((i = br.readLine()) != null)  
+	    while ((response = br.readLine()) != null)  
 		{ 
-	        //TODO brc by Djer Renvoyer la réponse et laisser l'appelant décider du mode d'affichage serait mieux.
-			System.out.println(i); 
+			System.out.println(response); 
 		} 
     }
 }
